refine gemspec license and test

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* Add Tests.
+* Change License text to GPL-3
 v0.0.5
 * add change_attributes method to edit QMRF 6.1-6.4 and 7.1-7.4
 * fix catalog referencing code, adjust node search
@@ -6,4 +8,3 @@ v0.0.2
 * rename gem qmrf-report to qsar-report
 v0.0.1
 * initial version
-
